syntax = "proto3";

package controlplane;

option go_package = "github.com/singchia/frontier/api/controlplane/frontlas/v1;v1";

import "google/api/annotations.proto";

message GetFrontierByEdgeIDRequest {
    uint64 edge_id = 1;
}

message Frontier {
    string frontier_id = 1;
    string advertised_sb_addr = 2;
    string advertised_eb_addr = 3;
}

message GetFrontierByEdgeIDResponse {
    Frontier fontier = 1;
}

message GetFrontierByEdgeIDsRequest {
    repeated uint64 edge_ids = 1;
}

message GetFrontiersByEdgeIDsResponse {
    repeated Frontier frontiers = 1;
}

service ClusterService {
    rpc GetFrontierByEdge(GetFrontierByEdgeIDRequest) returns (GetFrontierByEdgeIDResponse);
    rpc MultiGetFrontiersByEdges(GetFrontierByEdgeIDsRequest) returns (GetFrontiersByEdgeIDsResponse);
}